v3.2.0 (2020.02.XX)
  - Update SQLite database engine to version 3.31.1
  - Update cURL library to version 7.68.0
  - Use "Filename" attribute provided by HDHomeRun RECORD instead of manually generating EDL file name(s) when applicable
  - Exclude episodes marked as "DeletedDontRerecord" from the list of reported timer instances
  - Exclude episodesmarked as "RecordIfNotRecorded" from the list of reported timer instances when a completed recording exists
  - Prevent missing channel(s) in the Electronic Program Guide (EPG) listings from causing unncessary XMLTV reload operations
  - Fix bug preventing calculation of original air date values for programs that aired prior to 1970.01.01
  - Limit reporting of program year to programs of type MV (Movies) in Electronic Program Guide (EPG) and Recorded TV
  - Limit reporting of program original air date to programs of type EP (Series Episode) and SH (Show) in Electronic Program Guide (EPG)

v3.1.1 (2020.01.08)
  - (Windows) Use a BELOW_NORMAL thread priority for the background task scheduler
  - Remove obsolete MPEG-TS packet filtering implementation when streaming via HTTP
  - Remove "Use Original Air Date timestamp for Recorded TV programs" setting
  - Fix bug preventing recording resume position from being set if recording is in-progress

v3.1.0 (2019.12.23)
  - Revert cURL library to version 7.66.0
  - Fix bug during stream changes that would fail to report the MIME type and realtime indicator of the new stream properly
  - Fix bug that could cause "Live Stream creation failed" errors when rapidly changing channels
  - Fix bug preventing stream read operations from exceeding the "DVR stream read chunk size" setting value
  - Fix bug causing recordings update to trigger twice when "Trigger recording discovery immediately after playback" is enabled
  - Add 5-second delay to application of "Trigger recording discovery immediately after playback" to limit during channel changes